# DietBot

./: .gitignore  CMakeLists.txt
proto/: .gitignore  CMakeLists.txt  chat.proto  config.proto  consumer.proto  product.proto
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  exception.cpp  exception.h  logger.cpp  logger.h  thread_pool.cpp  thread_pool.h
src/db/: CMakeLists.txt  client.cpp  client.h  migration.sql  migration.txt
src/service/: CMakeLists.txt  service.cpp  service.h
tests/: CMakeLists.txt  test_db.cpp  test_proto.cpp
tests/proto_test/: CMakeLists.txt  message.proto
